# planelet-sdk-python

./: DOCS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quotes.py  rss_trigger.py  timer_trigger.py  weather.py
planelet-sdk/: __init__.py  types.py
src/planelet_sdk/: server.py
superplane/: __init__.py  planelet.py  server.py  trigger.py  types.py
