[project]
name = "superplane-planelet-sdk"
version = "0.1.0"
description = "Python SDK for building SuperPlane planelets"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
