[project]
name = "planelet-sdk"
version = "0.1.0"
description = "Python SDK for building SuperPlane planelets"
readme = "README.md"
authors = [
    { name = "ThatXliner", email = "thatxliner@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"
